--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,11 @@
 export(DkubeAPI)
 export(DkubeCode)
 export(DkubeDataset)
+export(DkubeFeatureSet)
+export(DkubeIDE)
 export(DkubeModel)
 export(DkubePreprocessing)
+export(DkubeProject)
 export(DkubeServing)
 export(DkubeTraining)
 export(generate)
