--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(DkubeIDE)
 export(DkubeModel)
 export(DkubePreprocessing)
 export(DkubeProject)
+export(DkubeResourcePVC)
 export(DkubeServing)
 export(DkubeTraining)
 export(generate)
+export(install_dkube)
